tests/samples/valid/euro_in_string_escaped.pn
fn main()
{
	print!("\u{20ac}");
}
