tests/samples/invalid/octal_suffix.pn
fn main()
{
	var x = 0o777;
}
